2015-10-19  Richard Biener  <rguenther@suse.de>

	* gimple-fold.c (gimple_phi_nonnegative_warnv_p): New function.
	(gimple_stmt_nonnegative_warnv_p): Use it.
	* match.pd (CPROJ): New operator list.
	(cproj (complex ...)): Move simplifications from ...
	* builtins.c (fold_builtin_cproj): ... here.

2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (ix86_expand_vector_move): Use
	GET_MODE_BITSIZE for IA MCU psABI to get vector natural
	alignment.

2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	* doc/invoke.texi: Replace @optindex with @opindex.

2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/67995
	* config/i386/i386.c (ix86_valid_target_attribute_tree): If
	arch= is set,  clear all bits in x_ix86_isa_flags, except for
	ISA_64BIT, ABI_64, ABI_X32, and CODE16.

2015-10-19  Joost VandeVondele  <vondele@gnu.gcc.org>

	PR middle-end/68002
	* common.opt (fkeep-static-functions): New option.
	* doc/invoke.texi: Document it.
	* cgraphunit.c (cgraph_node::finalize_function): Use it.

2015-10-19  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* sched-int.h (struct autopref_multipass_data_): Remove offset
	field.  Add min_offset, max_offset, multi_mem_insn_p fields.
	* haifa-sched.c (analyze_set_insn_for_autopref): New function.
	(autopref_multipass_init): Use it.  Handle PARALLEL sets.
	(autopref_rank_data): New function.
	(autopref_rank_for_schedule): Use it.
	(autopref_multipass_dfa_lookahead_guard_1): Likewise. 

2015-10-18  Mikhail Maltsev  <maltsevm@gmail.com>

	PR other/65800
	* gengtype.c (dump_type): Handle TYPE_UNDEFINED correctly.

2015-10-18  Iain Sandoe  <iain@codesourcery.com>

	* config/darwin.h (TARGET_SYSTEM_ROOT): Remove this from here,
	(HAVE_LD_SYSROOT): New.  (SYSROOT_SPEC): New. 
	(LINK_SYSROOT_SPEC): Revise to remove the default for target sysroot.
	(STANDARD_STARTFILE_PREFIX_1): New.
	(STANDARD_STARTFILE_PREFIX_2): New.

2015-10-18  Iain Sandoe  <iain@codesourcery.com>
