@@ -1,5 +1,10 @@
 2015-10-19  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/67975
+	* gcc.dg/tree-ssa/ssa-fre-50.c: New testcase.
+
+2015-10-19  Richard Biener  <rguenther@suse.de>
+
 	* gcc.dg/torture/builtin-cproj-1.c: Skip for -O0.
 
 2015-10-19  H.J. Lu  <hongjiu.lu@intel.com>
